<resources>
    <string name="app_name" translatable="false">TRIZ Business and Management V2</string>
    <string name="onboardingButton1">Next</string>
    <string name="onboardingButton2">Get Started</string>
    <string name="onboardingTitle1">About Apps</string>
    <string name="onboardingDesc1">This application is a problem-solving application that implements the TRIZ problem-solving method introduced by Genrikh Saulovich Altshuller in a mobile form.</string>
    <string name="onboardingTitle2">Application Purpose</string>
    <string name="onboardingDesc2">This application is a learning media for users to learn and understand the triz method as one of the problem solving methods. The main purpose of this application is to facilitate users in learning and understanding the TRIZ method. In addition, users can also use this application to apply the TRIZ method in their daily lives.</string>
    <string name="onboardingTitle3">Main Feature</string>
    <string name="onboardingDesc3">In this application there is a feature that implements the TRIZ contradiction matrix in solving contradictory problems. There are also a number of materials on the basics of the TRIZ method that can help users to learn and understand the TRIZ method. </string>
    <string name="home2Title">Home</string>
    <string name="matrix2Set">Set the Contradiction</string>
    <string name="matrix2Improving">Choose the Improving parameter</string>
    <string name="matrix2Worsening">Choose the Worsening parameter</string>
    <string name="principles">Principles</string>
    <string name="subPrinciples">The TRIZ Matrix proposes the following Principles to solve the contradiction:</string>
    <string name="buttonTriz">Get to Know About TRIZ</string>
    <string name="chooseP">Choose the Parameter</string>
    <string name="infodesc">Description :</string>
    <string name="info1">1. Select the improving parameter according to what you want.</string>
    <string name="info2">2. Select the worsening parameter that contradicts your improving parameter.</string>
    <string name="info3">3. Display the principles of the parameters you have selected.</string>
    <string name="understandingTitle">TRIZ Understanding</string>
    <string name="postTest">Do the Post Test</string>
    <string name="whatIs">What is TRIZ</string>
    <string name="businessManagement">How can it works in Business and Managemnt</string>
    <string name="systemParameter">39 System Parameter</string>
    <string name="inventivePrinciples">40 Inventive Principles</string>
    <string name="contradictionMatrix">Contradiction Matrix</string>
    <string name="menu_name">Navigation Drawer</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="howcan">How can it Works</string>
    <string name="under">Understanding Page</string>
    <string name="changeLang">Change Language</string>
    <string name="trizTitle">Teoriya Resheniya Izobretatelskikh Zadatch (TRIZ)</string>
    <string name="page1">TRIZ is one of the methods introduced by Genrikh Saulovich Altshuller by offering 40 principal solutions to overcome the contradictions of the problems that occur from 39 existing parameters. Altshuller has analyzed 200,000 existing patents and then he made a pattern of solutions to the problems solved by these patents. After that, from these strong patterns Altshuller collected them again into 40,000 patents.</string>
    <string name="page2">From the 40,000 patents with strong patterns that he got, Altshuller concluded that there are cause variables called 39 system parameters and solution variables for each problem called 40 principal solutions.</string>
    <string name="page3">TRIZ provides great principles and concrete tools for creative thinking in a range of technologies.\n TRIZ is also widely used in various technical and business worlds in many industries to assist in the generation of solutions to problems.</string>
    <string name="page4">Therefore, Altshuller introduced the TRIZ method with 39 parameter systems and 40 Solution Principals which have been compressed from 40,000 existing patents.\n TRIZ is a philosophy of science and technology method with a systematic and structured way of thinking to find creative and innovative development solution ideas to a problem, a system that includes knowledge technology for databases.</string>
    <string name="page5">TRIZ can be used in creating new products to generate product innovation ideas or ideas to make the innovation process more effective and efficient such as reducing operational costs or expenses.</string>
    <string name="reference">Video References</string>
    <string name="video">Source :</string>
    <string name="parameterTitle">39 System Parameter</string>
    <string name="parameter">The Parameter</string>
    <string name="parameterDesc">The principle of 39 System Parameters in TRIZ are standard problem types used for crystallized problems and what variables conflict with each other. This principle is the fundamental consideration for identifying system parameters that are improving and worsening. These parameters are then compared against each other to form the TRIZ contradiction matrix(San, 2019).</string>
    <string name="meaningpTitle">Meaning</string>
    <string name="saepTitle">Synonyms, Antonims, and Equivalent meanings</string>
    <string name="principlesTitle">40 Inventive Principles</string>
    <string name="thePrinciples">The Principles</string>
    <string name="princplesDesc">The Principle of 40 Principal Solutions in TRIZ is used to provide solutions to overcome the intersection that occurs between system parameters. This principle is the basis consideration of the problem solving pattern(San, 2019).</string>
    <string name="principlesSol">Solutions</string>
    <string name="principlesIllu">Illustrations</string>
    <string name="illuButton">Illustration</string>
    <string name="bamTitle">How can it Work in Business and Management</string>
    <string name="bamDesc1">TRIZ for Business and Management</string>
    <string name="bamDesc2">Are you ready to face new challenges to grow your business? Are you able to develop new breakthrough ideas that can give you an edge over the competition? TRIZ can be used to assist in developing innovative ideas for business strategies effectively and efficiently.</string>
    <string name="busDesc1">TRIZ in Business</string>
    <string name="busDesc2">In an effort to generate new product introduction is a radical innovation process, Obviously the process is not efficient at all. Because very limited resources will cause very expensive costs in developing new products coupled with a high risk of success. The worst case scenario is when you find that the product is not accepted in the market. There needs to be a better way than just a trial and error brainstorming approach to generating ideas. We need to use structured and systematic tools like TRIZ to reduce the quantity of effort, while increasing the quality of ideas. This reduces time and resources for new product validation and success. Business people who can adopt this method and improve their innovation process efficiently can have a high chance to compete with competitors.</string>
    <string name="manDesc1">TRIZ in Management</string>
    <string name="manDesc2">Roles in management typically involve leading and coordinating a group of people to achieve a set of goals or objectives. In the process of achieving this goal or objective, the group will very often need to tackle a range of simple to complex problems. In most cases, management problems are complex and have multiple root causes. The root causes are not easily identified and are interrelated where improvements in one area can lead to improvement but also give rise to worsening problems in different areas. This is an often overlooked contradiction.</string>
    <string name="manDesc3">Problems with multiple root causes cannot be solved through conventional methods. it will be essential to equip the management team with sophisticated problem solving techniques such as TRIZ to solve complex problems. It has been proven that technical methodologies and tools can be borrowed and used effectively to assist in the field of management. Management teams that can solve complex problems and are able to cope with increasing complexity will have an added advantage in a globalized future.</string>
    <string name="contmatTitle">Contradiction Matrix</string>
    <string name="contmatDesc1">The TRIZ method uses the principle of matrix contradiction as an initial analysis in finding the recommended solution results offered by the TRIZ method and is obtained from the technical intersection between the increasing parameter and the deteriorating parameter. The intersection technique works with when trying to increase a system parameter, other aspects will decrease. The intersection is determined by using the concept of 39 parameter systems in the TRIZ method.</string>
    <string name="contmatDesc2">Based on the 39 parameter systems, the contradiction matrix records 4 principal solutions for each type of problem in the form of a 39x39 table. The contradiction matrix will identify to provide solution recommendations based on 40 solution principals that have the potential to solve existing problems according to a predetermined parameter system. The contradiction matrix is used as the core in the database in this application.</string>
    <string name="contuseDesc1">The expression of technical contradiction is in the form of: if the manipulative variable changes, the response variable #1 increases, but the response variable #2 worsens. Example: If more incentives are given to employees, then employee retention increases but this will complicate the company compensation and benefits operations:</string>
    <string name="contuseDesc2">Based on the predetermined parameters, the recommended inventive solution principles are as follows: (2), (35), (22), (26)</string>
    <string name="caseStudynew">Case Study</string>
    <string name="howToUse">How to Use</string>
    <string name="titleCase1">Study Case 1</string>
    <string name="titleCase2">Study Case 2</string>
    <string name="case1">If employee productivity doubled, then company will be able to meet customer demand but employee health worsen</string>
    <string name="case2">If manager is aggresive, then responsibility and number of project assigned increases but subordinates receive fewer recognitions and acknowledgments (due to limited manager bandwith)</string>
    <string name="problem">Problem</string>
    <string name="solve">an Example of Completition</string>
    <string name="improve1">Improving Parameter :</string>
    <string name="improve2">If employee productivity doubled</string>
    <string name="improve3">(27) Reliability/Robustness</string>
    <string name="improve4">If manager is aggresive, then responsibility and number of project assigned increases</string>
    <string name="improve5">(4) Coverage/span of supervisor responsibility</string>
    <string name="worsening1">Worsening Parameter :</string>
    <string name="worsening2">employee health worsen</string>
    <string name="worsening3">(11) Stress/Pressure</string>
    <string name="worsening4">subordinates receive fewer recognitions and acknowledgments (due to limited manager bandwith)</string>
    <string name="worsening5">(17) Type of interaction</string>
    <string name="solution1">Available Solution</string>
    <string name="solution2">The TRIZ Contradiction Matrix propose the following Inventive Principles based on the Paramaters (27/11) :</string>
    <string name="solution3">The TRIZ Contradiction Matrix propose the following Inventive Principles based on the Paramaters (4/17) :</string>
    <string name="principles1">(10) Preliminary Action</string>
</resources>