<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="500dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/instruction_bg">

    <TextView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/ic_baseline_close_24"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:paddingBottom="20dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp">

            <ImageView
                android:id="@+id/info1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/info_eng1"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/desc1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/info1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_marginHorizontal="16dp"
                android:padding="5dp"
                android:text="@string/infodesc"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/fourth"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/desc2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/desc1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp"
                android:padding="5dp"
                android:text="@string/info1"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/fourth"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/desc3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/desc2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp"
                android:padding="5dp"
                android:text="@string/info2"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/fourth"
                android:textSize="12sp"/>
            <ImageView
                android:id="@+id/info2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/desc3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/info_eng2"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/desc4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/info2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_marginHorizontal="16dp"
                android:padding="5dp"
                android:text="@string/infodesc"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/fourth"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/desc5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/desc4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp"

                android:padding="5dp"
                android:text="@string/info3"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/fourth"
                android:textSize="12sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>